--- a/exp-app/index.html
+++ b/exp-app/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <!-- Set the base href -->
+    <script>document.write('<base href="' + document.location + '" />');</script>
+    
     <title></title>
     <meta charset="utf-8">
     <script src="cordova.js"></script>
@@ -13,6 +16,7 @@
     <script src="systemjs/dist/system.src.js"></script>
     <script src="rxjs/bundles/Rx.js"></script>
     <script src="angular2/bundles/angular2.dev.js"></script>
+    <script src="angular2/bundles/router.dev.js"></script>
 </head>
 
 <body>
