Changes made by Tsvetelina Ivanova (tsvetelina.ivanova@telerik.com).

--- a/exp-app/index.html
+++ b/exp-app/index.html
@@ -16,7 +16,10 @@
     <script src="systemjs/dist/system.src.js"></script>
     <script src="rxjs/bundles/Rx.js"></script>
     <script src="angular2/bundles/angular2.dev.js"></script>
+    
+    <!-- Add the router library -->
     <script src="angular2/bundles/router.dev.js"></script>
+    
 </head>
 
 <body>
